--- a/comment-service/application.yml
+++ b/comment-service/application.yml
@@ -1,8 +1,9 @@
 spring:
   data:
     mongodb:
-      database: comment
-      port: 27018
+      uri: mongodb://mongo:27017/commentdb
+#      database: commentdb
+#      port: 27018
 migration:
   changelogPackage: ru.otus.spring.hw18.comment_service.migration.changelog
 #management:
