otus config fix

--- a/comment-service/application.yml
+++ b/comment-service/application.yml
@@ -1,8 +1,8 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://mongo:27017/commentdb
-#      database: commentdb
+      uri: mongodb://localhost:27018/commentdb
+      database: commentdb
 #      port: 27018
 migration:
   changelogPackage: ru.otus.spring.hw18.comment_service.migration.changelog
