--- a/comment-service/application.yml
+++ b/comment-service/application.yml
@@ -1,19 +1,12 @@
+server:
+  port: 8082
+
+eureka:
+  client:
+    fetch-registry: true
+
 spring:
   data:
     mongodb:
       uri: mongodb://localhost:27018/commentdb
       database: commentdb
-#      port: 27018
-migration:
-    #  changelogPackage: ru.otus.spring.hw18.comment_service.migration.changelog
-    ##management:
-    ##  endpoints:
-    ##    web:
-    ##      exposure:
-    ##        include: metrics, logfile, health
-    ##  endpoint:
-    ##    health:
-    ##      show-details: always
-    ##logging:
-  ##  file:
-  ##    name: hw16-actuator/logs/book_info_logs
